<resources>
    <string name="app_name">pr-33_Kuznetsov_v</string>
    <string name="register">Регистрация</string>
    <string name="logAndPas">Введите ваш логин и пароль</string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="Enter">Войти</string>
    <string name="back">На главное меню</string>
    <string name="credit_calc">Кредитный калькулятор</string>
    <string name="need">Сколько вам нужно</string>
    <string name="ot">От 30 000</string>
    <string name="doo">до 100 000</string>
    <string name="enter_srok">введите срок кредита</string>
    <string name="calculate">расcчитать</string>
    <string name="mPlat">Ежемесячный платеж</string>
    <string name="sum">Сумма кредита</string>
    <string name="srok">срок кредита</string>
</resources>