<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/green_apple"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:background="@color/white"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo">
        </androidx.appcompat.widget.AppCompatImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/green_apple"
            android:textStyle="bold"
            android:textSize="36sp"
            android:layout_marginStart="78dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="519dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logAndPas"
            android:textColor="@color/black"
            android:layout_marginStart="55dp"
            android:layout_marginTop="65dp">
        </TextView>
        <EditText
            android:id="@+id/login"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:hint="@string/Login"
            android:layout_marginStart="56dp"
            android:layout_marginTop="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:layout_marginStart="56dp"
            android:layout_marginTop="41dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:background="@drawable/button_login"
            android:text="@string/Enter"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_marginTop="183dp"
            android:layout_marginLeft="30dp"
            android:onClick="OnClickLogin">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>