<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green_apple">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_calc"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="65dp"
            android:layout_marginStart="60dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="519dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="268dp"
            android:layout_height="30dp"
            android:background="@drawable/spiner"
            android:layout_marginStart="72dp"
            android:layout_marginTop="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sum"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="65sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:layout_marginStart="100dp"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:background="@drawable/ente"
            android:layout_marginStart="127dp"
            android:layout_marginTop="90dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srok"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="40sp"/>

        </LinearLayout>
        <TextView
            android:id="@+id/srock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="130dp"/>
        <LinearLayout
            android:layout_width="268dp"
            android:layout_height="55dp"
            android:background="@drawable/ente"
            android:layout_marginStart="72dp"
            android:layout_marginTop="65dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mPlat"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="40sp"/>
            <TextView
                android:id="@+id/mPlat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonResult"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:background="@drawable/button_login"
            android:text="@string/register"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="70dp"
            android:layout_marginStart="30dp"
            android:onClick="OnClickReg"
            android:textAllCaps="false"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@color/white"/>

</androidx.appcompat.widget.LinearLayoutCompat>